--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -5,22 +5,23 @@
 
 {% block body %}
 
+{% if request.user.is_authenticated %}
+<script>window.location = '/'</script>
+{% endif %}
+
 <div class="container">
-    <form>
+    <form class="mx-auto my-5 w-25">
+        <h1 class="text-center my-5">Welcome back</h1>
+        
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Username</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="password" class="form-control" id="exampleInputPassword1" required>
         </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary container-fluid">LOGIN</button>
     </form>
 </div>
 
