shifted to in-build functionality for LOGIN & SIGNUP

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -10,16 +10,22 @@
 {% endif %}
 
 <div class="container">
-    <form class="mx-auto my-5 w-25">
+    <form class="mx-auto my-5 w-25" method="post">
+        {% csrf_token %}
+
+        {% if form.errors %}
+            <p><span style="color: red;">Invalid Username or Password.</span> Please try again</span>
+            {{form.errors}}
+        {% endif %}
         <h1 class="text-center my-5">Welcome back</h1>
         
         <div class="mb-3">
             <label for="email" class="form-label">Username</label>
-            <input type="text" class="form-control" id="email" aria-describedby="emailHelp" required>
+            <input type="text" name="username" class="form-control" id="email" aria-describedby="emailHelp" required>
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" required>
+            <input type="password" name="password" class="form-control" id="password" required>
         </div>
         <button type="submit" class="btn btn-primary container-fluid">LOGIN</button>
     </form>
