--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -44,7 +44,7 @@
             </ul>
             <div>
             {% if request.user.is_authenticated %}
-                <button class="btn btn-primary" type="button">Cart</button>
+                <a class="btn btn-primary" type="button" href="{% url 'account:cart' %}">Cart</a>
                 <a class="btn btn-outline-secondary" type="button" href="{% url 'account:logout' %}">Logout</a>
             {% else %}
                 <a class="btn btn-secondary" type="button" href="{% url 'account:login' %}">Login</a>
