--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -1,3 +1,5 @@
+{% spaceless %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,18 +10,25 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.6.1/font/bootstrap-icons.min.css" integrity="sha512-9a1QYep56cYgIPFq0JYfsh9xRYYmPBxKaD6/ZfVAtplQ6y9ZUSk7GxgC2dmwtxK9T2cGQOxCV6J2Ll51nrvP2w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>{% block title %}{% endblock title %}</title>
     
     <style>
         {% block css %}{% endblock css %}
     </style>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="{% static 'home/js/jquery.js' %}"></script>
+    <script src="{% static 'home/js/functions.js' %}"></script>
+    <script src="{% static 'home/js/main.js' %}"></script>
     
     {% block head %}{% endblock head %}
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Evolves</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,9 +52,9 @@
                 </form>
             </ul>
             <div>
+                <a class="btn btn-primary mx-1" type="button" href="{% url 'account:cart' %}"><i class="bi bi-cart"></i> Cart <span id="totalCartItems">0</span></a>
             {% if request.user.is_authenticated %}
-                <a class="btn btn-primary" type="button" href="{% url 'account:cart' %}">Cart</a>
-                <a class="btn btn-outline-secondary" type="button" href="{% url 'account:logout' %}">Logout</a>
+                <a class="btn btn-outline-secondary" type="button" href="{% url 'account:logout' %}"><i class="bi bi-box-arrow-right"></i> Logout</a>
             {% else %}
                 <a class="btn btn-secondary" type="button" href="{% url 'account:login' %}">Login</a>
                 <a class="btn btn-outline-secondary" type="button" href="{% url 'account:register' %}">Sign Up</a>
@@ -55,13 +64,13 @@
     </div>
     </nav>
 
+    <br><br>
+
     {% block body %}{% endblock body %}
-    
-    <script>
-        {% block js %}{% endblock js %}
-    </script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="{% static 'home/js/main.js' %}"></script>
+
+    <script>{% block js %}{% endblock js %}</script>
+
   </body>
 </html>
+
+{% endspaceless %}
