added commas in cart total price

--- a/account/templates/account/cart.html
+++ b/account/templates/account/cart.html
@@ -74,6 +74,9 @@ cart.forEach(product => {
     totalCost += product.price;
 });
 
+// adding commas
+totalCost = totalCost.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",")
+
 $('#total-price').text(totalCost + ".00");
 
 
