--- a/account/templates/account/cart.html
+++ b/account/templates/account/cart.html
@@ -54,13 +54,15 @@ a {
 const cart = JSON.parse(localStorage.getItem('cart'));
 
 cart.forEach(product => {
+    let newPriceString = product.price.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",")
+    
     $('#cart-list').append(`<li class="list-group-item d-flex flex-row justify-content-between align-items-center">
                                 <a href="/product/${product.slug}" class="d-flex flex-row align-items-center">
                                     <img src="${product.img}" alt="MacBook Air" width="100px">
                                     
                                     <div class="d-flex flex-column align-items-start flex-wrap p-3">
                                         <p class="product-name">${product.name}</p>
-                                        <span class="badge rounded-pill bg-dark">&#x20B9; ${product.price}</span>
+                                        <span class="badge rounded-pill bg-dark">&#x20B9; ${newPriceString + ".00"}</span>
                                     </div>
                                 </a>
                                 
