--- a/shop/templates/shop/search.html
+++ b/shop/templates/shop/search.html
@@ -18,7 +18,9 @@
 
 {% block body %}
 
-<div class="container">
+<div class="container my-5">
+
+        <h3>{{ products.count }} result{{ products.count|pluralize }} found for: "{{ query }}"</h3>
 
         <div class="row row-cols-1 row-cols-md-3 g-4">
             
