fixed: confirm submission

--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -175,7 +175,7 @@
                                 <option value="10">10</option>
                             </select>
                             
-                            <button type="submit" id="add-to-cart" class="btn btn-primary">Add to Cart</button>
+                            <button type="button" id="add-to-cart" class="btn btn-primary">Add to Cart</button>
                         </div>
                     </div>
                 </form>
