--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -18,3 +18,8 @@
     border: 1px solid #dee2e6;
     border-radius: 0.125rem;
 }
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0; /* remove the gap so it doesn't close */
+}
